--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -7,7 +7,10 @@
     --color-black: #000000;
 
     --color-accent: #0a398a;
+    --color-accent-blue: #0a3b93;
     --color-accent-2: #f7eee5;
+    --color-accent-3: #6c5f4a;
+    --color-accent-4: #f5e1cd;
 
     --font-family: 'Arial', sans-serif;
     --second-family: 'Lato', sans-serif;
