--- a/src/scss/components/experience.scss
+++ b/src/scss/components/experience.scss
@@ -1,10 +1,55 @@
 .experience {
     position: relative;
+    display: flex;
+    margin-bottom: 10rem;
+    align-items: flex-end;
+    justify-content: space-between;
+    gap: 4rem;
+
+    @media (max-width: 961px) {
+        margin-bottom: 8rem;
+        align-items: flex-start;
+        gap: 26px;
+    }
+
+    @media (max-width: 641px) {
+        margin-bottom: 6rem;
+        flex-direction: column-reverse;
+        gap: 7.4rem;
+    }
+
+    @media (max-width: 325px) {
+        margin-bottom: 5rem;
+        gap: 48px;
+    }
 
     &__video {
         position: relative;
         width: 545px;
         height: 365px;
+
+        @media (max-width: 961px) {
+            width: 405px;
+            height: 271px;
+            margin-top: 60px;
+        }
+
+        @media (max-width: 641px) {
+            width: 90.2%;
+            height: 361px;
+            margin: 0 0 0 50px;
+        }
+
+        @media (max-width: 575px) {
+            width: 100%;
+            height: 340px;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 325px) {
+            width: 90%;
+            height: 174px;
+        }
 
         iframe {
             width: 100%;
@@ -26,6 +71,140 @@
             left: -35px;
             z-index: -2;
             background: var(--color-accent-2);
+
+            @media (max-width: 961px) {
+                top: -27px;
+                left: -41px;
+            }
+
+            @media (max-width: 641px) {
+                top: -42px;
+                left: -32px;
+                width: 520px;
+                height: 382px;
+            }
+
+            @media (max-width: 325px) {
+                top: -20px;
+                left: -14px;
+                width: 250px;
+                height: 184px;
+            }
+        }
+    }
+
+    &__info {
+        display: flex;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: flex-start;
+        align-content: center;
+        justify-content: space-between;
+        gap: 32px;
+
+        @media (max-width: 641px) {
+            gap: 20px;
+        }
+
+        @media (max-width: 325px) {
+            gap: 28px;
+        }
+
+        &_years {
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            align-items: flex-start;
+            align-content: center;
+            justify-content: space-between;
+            gap: 2rem;
+
+            @media (max-width: 641px) {
+                gap: 13px;
+            }
+
+            @media (max-width: 325px) {
+                gap: 16px;
+            }
+
+            &-img {
+                @media (max-width: 641px) {
+                    width: 71px;
+                    height: 31px;
+                }
+            }
+
+            &-text {
+                font-family: var(--second-family);
+                font-weight: 700;
+                font-size: 1.8rem;
+                line-height: 167%;
+                text-transform: uppercase;
+                color: var(--color-accent);
+
+                @media (max-width: 641px) {
+                    display: none;
+                }
+            }
+
+            &-small {
+                display: none;
+
+                @media (max-width: 641px) {
+                    display: block;
+                }
+            }
+        }
+
+        &_text {
+            display: flex;
+            max-width: 545px;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+            gap: 15px;
+            font-family: var(--font-family);
+            font-weight: 400;
+            font-size: 1.8rem;
+            line-height: 167%;
+            color: var(--color-accent-3);
+
+            @media (max-width: 961px) {
+                max-width: 417px;
+            }
+
+            @media (max-width: 641px) {
+                width: 95%;
+                max-width: 100%;
+                gap: 0;
+                font-size: 1.4rem;
+                line-height: 143%;
+            }
+
+            @media (max-width: 325px) {
+                width: 90%;
+            }
+
+            &-1 {
+                @media (max-width: 641px) {
+                    margin-bottom: 8px;
+                }
+            }
+
+            &-2 span {
+                @media (max-width: 641px) {
+                    display: none;
+                }
+            }
+
+            &-3 {
+                display: none;
+
+                @media (max-width: 641px) {
+                    display: block;
+                }
+            }
         }
     }
 }
