--- a/src/scss/components/experience.scss
+++ b/src/scss/components/experience.scss
@@ -6,21 +6,38 @@
     justify-content: space-between;
     gap: 4rem;
 
-    @media (max-width: 961px) {
+    @media (max-width: 931px) {
         margin-bottom: 8rem;
         align-items: flex-start;
         gap: 26px;
     }
 
-    @media (max-width: 641px) {
+    @media (max-width: 611px) {
         margin-bottom: 6rem;
         flex-direction: column-reverse;
         gap: 7.4rem;
     }
 
-    @media (max-width: 325px) {
+    @media (max-width: 291px) {
         margin-bottom: 5rem;
         gap: 48px;
+    }
+
+    &:after {
+        @include pseudoelem;
+
+        @media (max-width: 931px) {
+            top: unset;
+            bottom: -80px;
+            left: -50%;
+            width: 200%;
+            height: 18px;
+            background-color: var(--color-accent-2);
+        }
+
+        @media (max-width: 611px) {
+            display: none;
+        }
     }
 
     &__video {
@@ -28,27 +45,22 @@
         width: 545px;
         height: 365px;
 
-        @media (max-width: 961px) {
+        @media (max-width: 931px) {
             width: 405px;
             height: 271px;
             margin-top: 60px;
         }
 
-        @media (max-width: 641px) {
-            width: 90.2%;
+        @media (max-width: 611px) {
+            width: 95%;
             height: 361px;
-            margin: 0 0 0 50px;
+            margin: 0 0 0 29px;
         }
 
-        @media (max-width: 575px) {
+        @media (max-width: 291px) {
             width: 100%;
-            height: 340px;
-            margin: 0 auto;
-        }
-
-        @media (max-width: 325px) {
-            width: 90%;
             height: 174px;
+            margin: 0 auto;
         }
 
         iframe {
@@ -72,19 +84,19 @@
             z-index: -2;
             background: var(--color-accent-2);
 
-            @media (max-width: 961px) {
+            @media (max-width: 931px) {
                 top: -27px;
                 left: -41px;
             }
 
-            @media (max-width: 641px) {
+            @media (max-width: 611px) {
                 top: -42px;
-                left: -32px;
+                left: -29px;
                 width: 520px;
                 height: 382px;
             }
 
-            @media (max-width: 325px) {
+            @media (max-width: 291px) {
                 top: -20px;
                 left: -14px;
                 width: 250px;
@@ -103,11 +115,11 @@
         justify-content: space-between;
         gap: 32px;
 
-        @media (max-width: 641px) {
+        @media (max-width: 611px) {
             gap: 20px;
         }
 
-        @media (max-width: 325px) {
+        @media (max-width: 291px) {
             gap: 28px;
         }
 
@@ -120,16 +132,16 @@
             justify-content: space-between;
             gap: 2rem;
 
-            @media (max-width: 641px) {
+            @media (max-width: 611px) {
                 gap: 13px;
             }
 
-            @media (max-width: 325px) {
+            @media (max-width: 291px) {
                 gap: 16px;
             }
 
             &-img {
-                @media (max-width: 641px) {
+                @media (max-width: 611px) {
                     width: 71px;
                     height: 31px;
                 }
@@ -143,7 +155,7 @@
                 text-transform: uppercase;
                 color: var(--color-accent);
 
-                @media (max-width: 641px) {
+                @media (max-width: 611px) {
                     display: none;
                 }
             }
@@ -151,7 +163,7 @@
             &-small {
                 display: none;
 
-                @media (max-width: 641px) {
+                @media (max-width: 611px) {
                     display: block;
                 }
             }
@@ -170,30 +182,30 @@
             line-height: 167%;
             color: var(--color-accent-3);
 
-            @media (max-width: 961px) {
+            @media (max-width: 931px) {
                 max-width: 417px;
             }
 
-            @media (max-width: 641px) {
-                width: 95%;
+            @media (max-width: 611px) {
+                width: 100%;
                 max-width: 100%;
                 gap: 0;
                 font-size: 1.4rem;
                 line-height: 143%;
             }
 
-            @media (max-width: 325px) {
-                width: 90%;
+            @media (max-width: 291px) {
+                width: 100%;
             }
 
             &-1 {
-                @media (max-width: 641px) {
+                @media (max-width: 611px) {
                     margin-bottom: 8px;
                 }
             }
 
             &-2 span {
-                @media (max-width: 641px) {
+                @media (max-width: 611px) {
                     display: none;
                 }
             }
@@ -201,7 +213,7 @@
             &-3 {
                 display: none;
 
-                @media (max-width: 641px) {
+                @media (max-width: 611px) {
                     display: block;
                 }
             }
