--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,3 +13,5 @@
 @import './components/title';
 @import './components/experience';
 @import './components/info';
+@import './components/mission';
+@import './components/button';
