--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -28,7 +28,7 @@ body {
     max-width: 125rem;
     margin: 0 auto;
     padding: 0 6rem;
-    border: 1px solid red;
+    // border: 1px solid red;
 
     @media (max-width: 931px) {
         padding: 0 4rem;
