--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -11,6 +11,7 @@
     --color-accent-2: #f7eee5;
     --color-accent-3: #6c5f4a;
     --color-accent-4: #f5e1cd;
+    --color-accent-5: #8a7b60;
 
     --font-family: 'Arial', sans-serif;
     --second-family: 'Lato', sans-serif;
