--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,3 +15,5 @@
 @import './components/info';
 @import './components/mission';
 @import './components/button';
+@import './components/advantages';
+@import './components/cross';
