import swiper locally

--- a/src/scss/components/advantages.scss
+++ b/src/scss/components/advantages.scss
@@ -91,6 +91,7 @@
         }
 
         @media (max-width: 929px) {
+            width: 260px !important;
             height: 284px !important;
         }
 
