--- a/src/scss/components/advantages.scss
+++ b/src/scss/components/advantages.scss
@@ -24,6 +24,7 @@
 
         @media (max-width: 610px) {
             max-width: 290px;
+            padding: 0 15px;
         }
     }
 
@@ -51,8 +52,7 @@
             text-align: center;
         }
 
-        @media (max-width: 291px) {
-            margin-left: 15px;
+        @media (max-width: 355px) {
             text-align: left;
         }
     }
@@ -68,27 +68,33 @@
         }
 
         @media (max-width: 929px) {
-            flex-wrap: nowrap;
-            gap: 0;
+            flex-wrap: unset;
+            justify-content: unset;
+            gap: unset;
         }
     }
 
     &__item {
         position: relative;
-        // width: 356px !important;
-        // height: 317px !important;
+        width: 356px !important;
+        height: 317px !important;
         background-color: var(--color-accent-blue);
         overflow: hidden;
 
-        // @media (max-width: 1250px) {
-        //     width: 260px !important;
-        //     height: 343px !important;
-        // }
+        @media (max-width: 1250px) {
+            width: 260px !important;
+            height: 343px !important;
+        }
 
-        // @media (max-width: 929px) {
-        //     width: 260px !important;
-        //     height: 284px !important;
-        // }
+        @media (max-width: 929px) {
+            width: 270.5px !important;
+            height: 284px !important;
+        }
+
+        @media (max-width: 610px) {
+            width: 260px !important;
+            height: 296px !important;
+        }
 
         &-img {
             display: block;
@@ -98,7 +104,6 @@
         }
 
         &-info {
-            position: relative;
             padding: 20px 20px 32px;
         }
 
@@ -152,57 +157,57 @@
     }
 
     &__swiper {
-        @media (max-width: 929px) {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-
         &-pagination,
         &-btn_prev::after,
         &-btn_next::after {
-            // display: none !important;
+            display: none !important;
         }
 
         &-pagination,
         &-btn_prev,
         &-btn_next {
             @media (max-width: 929px) {
-                // display: block !important;
+                display: block !important;
+            }
+        }
+
+        &-btn_prev,
+        &-btn_next {
+            @media (max-width: 929px) {
+                top: 69% !important;
+                transform: translateY(-69%) !important;
+                width: 11px !important;
+                height: 8px !important;
             }
         }
 
         &-btn_prev {
             @media (max-width: 929px) {
-                // left: -20px !important;
-                // width: 11px !important;
-                // height: 8px !important;
+                left: -20px !important;
                 background: url(../img/advantages/prev.svg) center/cover no-repeat !important;
             }
 
             @media (max-width: 355px) {
-                // left: 6px !important;
+                left: 0px !important;
             }
         }
 
         &-btn_next {
             @media (max-width: 929px) {
-                // right: -20px !important;
-                // width: 11px !important;
-                // height: 8px !important;
+                right: -20px !important;
                 background: url(../img/advantages/next.svg) center/cover no-repeat !important;
             }
 
             @media (max-width: 355px) {
-                // right: 0px !important;
+                right: 0px !important;
             }
         }
 
         &-pagination {
             @media (max-width: 929px) {
-                // position: absolute !important;
-                // top: auto !important;
-                // bottom: -16px !important;
+                position: absolute !important;
+                top: auto !important;
+                bottom: -16px !important;
             }
         }
     }
