--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -8,6 +8,7 @@
 
     --color-accent: #0a398a;
     --color-accent-blue: #0a3b93;
+    --color-accent-red: #930a0a;
     --color-accent-2: #f7eee5;
     --color-accent-3: #6c5f4a;
     --color-accent-4: #f5e1cd;
