--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,5 +15,7 @@
 @import './components/info';
 @import './components/mission';
 @import './components/button';
+@import './components/swiper';
 @import './components/advantages';
 @import './components/cross';
+@import './components/second-title';
