--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -13,6 +13,7 @@
     --color-accent-3: #6c5f4a;
     --color-accent-4: #f5e1cd;
     --color-accent-5: #8a7b60;
+    --color-accent-6: #0a3b8e;
 
     --font-family: 'Arial', sans-serif;
     --second-family: 'Lato', sans-serif;
