--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,3 +19,4 @@
 @import './components/advantages';
 @import './components/cross';
 @import './components/second-title';
+@import './components/fermentation';
