--- a/src/scss/components/fermentation.scss
+++ b/src/scss/components/fermentation.scss
@@ -86,10 +86,21 @@
             display: flex;
             width: 294px;
             height: 294px;
+            padding: 35px;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            gap: 32px;
             background-color: var(--color-accent-6);
+
+            &-text {
+                font-family: var(--font-family);
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 122%;
+                text-align: center;
+                color: #fff;
+            }
         }
 
         &-img {
