--- a/src/scss/components/fermentation.scss
+++ b/src/scss/components/fermentation.scss
@@ -1,5 +1,6 @@
 .fermentation {
     position: relative;
+    z-index: 2;
     padding-bottom: 12rem;
     background-color: var(--color-accent-2);
 
@@ -15,8 +16,19 @@
         padding-bottom: 83px;
     }
 
-    &:before {
+    .container {
+        @media (max-width: 970px) {
+            padding: 0 4rem;
+        }
+    }
+
+    &::before,
+    &::after {
         @include pseudoelem;
+        z-index: -1;
+    }
+
+    &:before {
         top: 0px;
         right: -73px;
         left: unset;
@@ -24,9 +36,9 @@
         height: 418px;
         background: url(../img/decor-fermentation-1.svg) center/cover no-repeat;
 
-        @media (max-width: 931px) {
-            // right: -285px;
-            // bottom: -146px;
+        @media (max-width: 970px) {
+            top: 21px;
+            right: -161px;
         }
 
         @media (max-width: 611px) {
@@ -42,6 +54,20 @@
             // bottom: -104px;
             // width: 237px;
             // height: 171px;
+        }
+    }
+
+    &::after {
+        top: unset;
+        bottom: 307px;
+        left: -200px;
+        width: 494px;
+        height: 368px;
+        background: url(../img/decor-fermentation-2.svg) center/cover no-repeat;
+
+        @media (max-width: 970px) {
+            bottom: 159px;
+            left: -222px;
         }
     }
 
@@ -75,20 +101,6 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-        }
-    }
-
-    &__block {
-        position: relative;
-        display: flex;
-        align-items: flex-start;
-
-        &_left {
-            justify-content: flex-start;
-        }
-
-        &_right {
-            justify-content: flex-end;
         }
     }
 
