--- a/src/scss/components/experience.scss
+++ b/src/scss/components/experience.scss
@@ -64,8 +64,10 @@
         }
 
         iframe {
+            position: relative;
             width: 100%;
             height: 100%;
+            border: none;
         }
 
         &::before,
