--- a/src/scss/components/experience.scss
+++ b/src/scss/components/experience.scss
@@ -1,32 +1,31 @@
 .experience {
     position: relative;
     display: flex;
-    margin-bottom: 10rem;
     align-items: flex-end;
     justify-content: space-between;
     gap: 4rem;
+    margin-bottom: 10rem;
 
     @media (max-width: 931px) {
-        margin-bottom: 8rem;
         align-items: flex-start;
         gap: 26px;
+        margin-bottom: 8rem;
     }
 
     @media (max-width: 611px) {
-        margin-bottom: 6rem;
         flex-direction: column-reverse;
         gap: 7.4rem;
+        margin-bottom: 6rem;
     }
 
     @media (max-width: 355px) {
-        margin-bottom: 5rem;
         gap: 48px;
+        margin-bottom: 5rem;
     }
 
     &:after {
-        @include pseudoelem;
-
         @media (max-width: 931px) {
+            @include pseudoelem;
             top: unset;
             bottom: -80px;
             left: -50%;
@@ -64,10 +63,12 @@
         }
 
         iframe {
-            position: relative;
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
-            border: none;
+            border: unset !important;
         }
 
         &::before,
@@ -77,7 +78,7 @@
 
         &::before {
             z-index: -1;
-            background: url(../img/player.jpg) center/cover no-repeat;
+            background: url(../img/poster.jpg) center/cover no-repeat;
         }
 
         &::after {
@@ -173,11 +174,11 @@
 
         &_text {
             display: flex;
-            max-width: 545px;
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
             gap: 15px;
+            max-width: 545px;
             font-family: var(--font-family);
             font-weight: 400;
             font-size: 1.8rem;
@@ -189,9 +190,9 @@
             }
 
             @media (max-width: 611px) {
+                gap: 0;
                 width: 100%;
                 max-width: 100%;
-                gap: 0;
                 font-size: 1.4rem;
                 line-height: 143%;
             }
